welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: not found: value bOK
  if (bOk==false && a>b && c>b|| bOK== true && c>b){
                                 ^